# IRS_TE3003B

./: README.md
m3_autonomous_robots/act3.2/: calibrate_camera.py  panorama2D.py
m3_autonomous_robots/act3.3/: camera_parameters.npz  photogramettry.py
m4_interfaces/: 01_recorder.py  02_extract_features.py  03_train_codebooks.py  cliente_grpc.py  convertidor.proto  servidor_grpc.py
m4_interfaces/act4.4/convertidor_py/: setup.cfg
m4_interfaces/act4.4/convertidor_py/convertidor_py/: cliente_ros.py  servidor_ros.py
m4_interfaces/act4.4/currency_interfaces/: package.xml
m4_interfaces/act4.4/currency_interfaces/srv/: ConvertCurrency.srv
m4_interfaces/convertidor_py/: package.xml  setup.py
m4_interfaces/currency_interfaces/: CMakeLists.txt
m4_interfaces/practica1_voz/: 04_recognize.py  audio_utils.py  lpc_lsf.py  vq_lbg.py
